Removing styles and fixing spacing

--- a/theme.css
+++ b/theme.css
@@ -38,12 +38,6 @@ h1 {
   text-align: center;
 }
 
-.wrapper {
-  width:100vw;
-  height:100vh;
-  background: radial-gradient(farthest-corner at 30vw 20vh,#7397a1 1%,#3f2c41 100%);
-}
-
 .buttons {
   width: 100%;
   height: 50px;
